--- a/MoviesApp/Base.lproj/Main.storyboard
+++ b/MoviesApp/Base.lproj/Main.storyboard
@@ -14,12 +14,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="130" sectionHeaderHeight="28" sectionFooterHeight="28" id="b0d-Gw-aWg">
-                                <rect key="frame" x="0.0" y="-7" width="375" height="682"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="675"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="232-eT-bSJ">
+                                    <rect key="frame" x="0.0" y="64" width="375" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="MovieCell" rowHeight="130" id="u0Q-0c-vRQ" customClass="MovieCell" customModule="MoviesApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="92" width="375" height="130"/>
+                                        <rect key="frame" x="0.0" y="136" width="375" height="130"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="u0Q-0c-vRQ" id="8sn-H7-RnZ">
                                             <rect key="frame" x="0.0" y="0.0" width="342" height="129.5"/>
@@ -79,14 +84,14 @@
                                                     <rect key="frame" x="0.0" y="232" width="87" height="34"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="rate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="TAO-QZ-PnA">
                                                     <rect key="frame" x="108" y="232" width="61" height="35"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -115,6 +120,7 @@
                     <connections>
                         <outlet property="movieCollectionView" destination="uBf-IX-pgf" id="AhA-y4-dKK"/>
                         <outlet property="movieTableView" destination="b0d-Gw-aWg" id="ich-Cb-LfM"/>
+                        <outlet property="searchBar" destination="232-eT-bSJ" id="FOp-Wi-Vbm"/>
                         <outlet property="viewTypeToggle" destination="Ssn-BP-Q7H" id="z6U-ls-kYy"/>
                     </connections>
                 </viewController>
@@ -198,6 +204,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="1c3-6P-loc"/>
+        <segue reference="b6U-4r-1cb"/>
     </inferredMetricsTieBreakers>
 </document>
